# joai-competition-2025-public

./: .gitignore  FeatureEngneering.py  README.md  ensamble.py  pyproject.toml  resnet.py  resnet_single.py  table_xgb.py
data/: README.md
ensamble/: README.md
