[project]
name = "joai-competition-2025-public"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dataclasses>=0.8",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "scikit-learn>=1.6.1",
    "timm>=1.0.15",
    "transformers>=4.51.3",
    "typing>=3.10.0.0",
    "wandb>=0.19.10",
    "xgboost>=3.0.0",
]
